# bioinf-helperlibs

./: .drone.yml  .gitignore  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  test.yml
helperlibs/bio/: featurematch.py  seqio.py
helperlibs/tests/: __init__.py
helperlibs/tests/bio/: test_featurematch.py  test_seqio.py
helperlibs/tests/files/: melanin.embl  melanin.fasta  melanin.gbk  no_header.embl  no_header.fasta  no_header.gbk
helperlibs/tests/wrappers/: test_io.py
helperlibs/wrappers/: io.py
