[metadata]
# This will completely override (not add to, but replace) the install_requires
# when building a wheel. Unfortunately this requires duplicating all of the
# depenencies here, but this allows us to support back to an older version of
# pip/setuptools inside the setup.py while still using the newer environment
# marker technique inside of a wheel.
requires-dist =
    biopython>=1.76;python_version>='3.6'
    biopython==1.76;python_version<'3.6'

[bdist_wheel]
universal=1

[pycodestyle]
max-line-length = 120

[flake8]
max-line-length = 120
